--- a/.eslintrc
+++ b/.eslintrc
@@ -10,12 +10,16 @@
     "env": {
       "browser": true,
       "es6": true,
-      "node": true
+      "node": true,
+      "mocha": true
     },
-    "globals": {},
+    "globals": {
+      "expect": true
+    },
     "parser": "babel-eslint",
     "rules": {
       "no-console": 1,
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "import/prefer-default-export": "off"
     }
 }
