--- a/package.json
+++ b/package.json
@@ -4,22 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
     "deep-freeze": "0.0.1",
-    "eslint": "^4.10.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "expect": "^21.2.1",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.19.4",
     "prop-types": "^15.6.0",
@@ -34,14 +19,43 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "source-map-loader": "^0.2.3",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "style-loader": "^0.19.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel": "~6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "~6.26.0",
+    "chai": "~4.1.2",
+    "css-loader": "~0.28.7",
+    "enzyme": "~3.2.0",
+    "enzyme-adapter-react-16": "~1.1.0",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "~3.0.2",
+    "jsdom": "~11.5.1",
+    "mocha": "~4.0.1",
+    "node-sass": "~4.7.2",
+    "redux-devtools": "^3.4.1",
+    "sass-loader": "~6.0.6",
+    "sinon": "~4.1.2",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "~0.19.0",
+    "webpack": "~3.10.0",
+    "webpack-dev-server": "^2.9.5"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --host 0.0.0.0 --public 192.168.110.110:3000 --watch-poll",
+    "test": "mocha --require babel-core/register --require ./test/setup.js test/**/*.spec.js",
+    "start": "webpack-dev-server --host 0.0.0.0 --public 172.17.167.47 --watch-poll --https",
     "build": "webpack",
     "lint": "eslint"
   },
