--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router": "3.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^1.0.16",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
@@ -57,7 +59,7 @@
   },
   "scripts": {
     "test": "mocha --require babel-core/register --require ./test/setup.js test/**/*.spec.js",
-    "start": "webpack-dev-server --host 0.0.0.0 --public 192.168.110.110:9000 --watch-poll",
+    "start": "webpack-dev-server --host 0.0.0.0 --public 192.168.110.110:9000 --hot --inline --history-api-fallback",
     "build": "webpack",
     "lint": "eslint"
   },
