--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "^1.0.16",
     "react-tap-event-plugin": "^3.0.2",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-devtools": "^3.4.0",
