--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
-    "redux-devtools": "^3.4.0",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.19.0"
+    "source-map-loader": "^0.2.3"
   },
   "devDependencies": {
     "babel": "~6.23.0",
