--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "jsdom": "~11.5.1",
     "mocha": "~4.0.1",
     "node-sass": "~4.7.2",
+    "prettier": "1.9.2",
+    "prettier-eslint": "8.7.0",
+    "prettier-eslint-cli": "^4.7.0",
     "redux-devtools": "^3.4.1",
     "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
@@ -60,7 +63,8 @@
     "test": "mocha --require babel-core/register --require ./test/setup.js test/**/*.spec.js",
     "start": "webpack-dev-server --host 0.0.0.0 --public 192.168.110.110:9000 --hot --inline --history-api-fallback",
     "build": "webpack",
-    "lint": "eslint"
+    "lint": "eslint",
+    "format": "prettier-eslint"
   },
   "author": "",
   "license": "ISC"
