Add uglifyjs settings

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "~0.19.0",
     "webpack": "~3.10.0",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "2.7.1"
   },
   "scripts": {
     "test": "mocha --require babel-core/register --require ./test/setup.js test/**/*.spec.js",
