--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,15 @@
 {
-    "extends": ["eslint:recommended", "plugin:react/recommended", "airbnb"],
-    "plugins": [],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "airbnb",
+      "prettier",
+      "prettier/react",
+    ],
+    "plugins": [
+      "react",
+      "prettier",
+    ],
     "parserOptions": {
       "ecmaVersion": 6,
       "sourceType": "module",
@@ -20,6 +29,7 @@
     "rules": {
       "no-console": 1,
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "import/prefer-default-export": "off"
+      "import/prefer-default-export": "off",
+      "prettier/prettier": ["error", { "singleQuote": true, "trailingComma": "es5" }]
     }
 }
