--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "enzyme-adapter-react-16": "~1.1.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "~3.0.2",
     "jsdom": "~11.5.1",
@@ -64,7 +66,8 @@
     "start": "webpack-dev-server --host 0.0.0.0 --public 192.168.110.110:9000 --hot --inline --history-api-fallback",
     "build": "webpack",
     "lint": "eslint",
-    "format": "prettier-eslint"
+    "format": "prettier-eslint",
+    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
   },
   "author": "",
   "license": "ISC"
