--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "~6.26.0",
+    "babel-runtime": "^6.26.0",
     "chai": "~4.1.2",
     "css-loader": "~0.28.7",
     "enzyme": "~3.2.0",
@@ -70,7 +71,7 @@
     "build": "webpack",
     "lint": "eslint",
     "format": "prettier-eslint",
-    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
+    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
   },
   "author": "",
   "license": "ISC"
