--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "~3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jsdom": "~11.5.1",
     "mocha": "~4.0.1",
     "node-sass": "~4.7.2",
@@ -61,8 +61,10 @@
     "sinon": "~4.1.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "~0.19.0",
-    "webpack": "~3.10.0",
-    "webpack-dev-server": "2.7.1"
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "scripts": {
     "test": "mocha --require babel-core/register --require ./test/setup.js test/**/*.spec.js",
@@ -71,7 +73,7 @@
     "build": "webpack",
     "lint": "eslint",
     "format": "prettier-eslint",
-    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
+    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
   },
   "author": "",
   "license": "ISC"
